svg/header spacing correction

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -348,9 +348,9 @@ nav {
       // border: 1px solid red;
       #logo {
         position: absolute;
-        top: 50%;
+        top: 0;
         left: 50%;
-        transform: translateX(-50%) translateY(-50%);
+        transform: translateX(-50%);
         // border: 1px solid orange;
         path {
           stroke: lightgrey;
